loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:7: error: not found: value isOnBiscuit
    if (isOnBiscuit()) {
        ^Poucet2:21: error: not found: value exitFound
} while (exitFound() == false)
         ^